[package]
name = "trace4rs-config"
description = "trace4rs configuration"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
in-order-serialization = ["serde"]

[dependencies]
literally = "0.1.3"
schemars = { version = "0.8.3", optional = true }
serde = { version = "1.0.130", optional = true, features = ["derive"] }
smart-default = "0.6.0"
thiserror = "1.0.29"
tracing = "0.1.0"

[dev-dependencies]
serde_json = "1.0.89"
