[package]
name = "trace4rs-config"
description = "trace4rs configuration"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true

[features]
in-order-serialization = ["serde"]

[dependencies]
schemars = { version = "0.8.3", optional = true }

serde = { workspace = true, optional = true, features = ["derive"] }

literally.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
