[package]
name = "trace4rs-fmtorp"
version = "0.5.0"
edition = "2021"
description = "Torpid formatting for trace4rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
old_nightly = []

[dependencies]
thiserror = "1.0.33"
tracing-subscriber = "0.3.15"
