[package]
name = "trace4rs-fmtorp"
description = "Torpid formatting for trace4rs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

[dependencies]
thiserror = "1.0.33"
tracing-subscriber = "0.3.15"
