[package]
name = "trace4rs"
description = "log4rs like usability with the `tracing` crate as the base"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
tracing-macros = []               # internal, for benches
serde = ["trace4rs-config/serde"]

[dependencies]
literally.workspace = true
log.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
regex.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-log.workspace = true
time.workspace = true
path-absolutize.workspace = true
trace4rs-config.workspace = true
trace4rs-fmtorp.workspace = true
utc-offset.workspace = true
camino.workspace = true

[dev-dependencies]
criterion.workspace = true
criterion-macro.workspace = true
log4rs.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
trace4rs-config = { workspace = true, features = ["in-order-serialization"] }

[[bench]]
name = "trace4rs_bench"
harness = false

[[bench]]
name = "log4rs_bench"
harness = false
