[package]
name = "utc-offset"
version = "0.1.0"
authors = ["rmeester <richard.meester@imperva.com>"]
edition = "2021"
description = "A no-holds-barred utc-offset getter"
license = "MIT"

[dependencies]
log = "0.4.13"
once_cell = "1.9.0"
thiserror = "1.0.30"
time = { version = "0.3.5", features = [
    "formatting",
    "local-offset",
    "parsing",
] }
